[package]
name = "tauri-deep-link-focus-repro"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open"] }
tauri-plugin-deep-link = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.windows]
version = "0.46.0"
features = [
    "Data_Xml_Dom",
    "UI_Notifications",
    "Win32_Foundation",
    "Win32_System_Threading",
]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
